--- a/djeddit/static/djeddit/css/variables.scss
+++ b/djeddit/static/djeddit/css/variables.scss
@@ -14,3 +14,9 @@ $brand-success:         #5cb85c !default;
 $brand-info:            #5bc0de !default;
 $brand-warning:         #f0ad4e !default;
 $brand-danger:          #d9534f !default;
+
+$font-family-base:      'Museosansrounded';
+$title-color:           #333;
+
+$upvote-color:           $brand-success;
+$downvote-color:         $brand-danger;
