--- a/djeddit/templates/djeddit/base.html
+++ b/djeddit/templates/djeddit/base.html
@@ -1,58 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends "navbar.html" %}
 
-<head>
-	<meta charset="utf-8" />
-	{% include 'meta/meta.html' %}
-	{% load staticfiles %}
-    {% include 'djeddit/base_stylesheets.html' %}
-    <meta name="viewport" content = "width=device-width, initial-scale=1.0">
-    {% block meta %}{% endblock %}
-</head>
+{% load staticfiles %}
+
+{% block extrahead %}
+{% include 'meta/meta.html' %}
+{% include 'djeddit/base_stylesheets.html' %}
+<link rel="stylesheet" type="text/css" href="{% static 'curricula/style.css' %}" />
+{% endblock %}
+
+{% block body_content %}
 
 <body class="body">
     <!-- Fixed navbar -->
 	<div id="wrap">
-        <nav class="navbar navbar-fixed-top">
-          <div class="container">
-            <div>
-              <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                    <li><a href="{% url 'userSummary' user.username %}">Profile</a></li>
-                    {% if user.is_superuser %}
-                        <li><a href="{% url 'usersPage' %}">Users</a></li>
-                    {% endif %}
-                    <li><a href="/accounts/logout">Logout</a></li>
-                {% else %}
-                    <li><a href="/accounts/login">Login</a></li>
-                    <li><a href="/accounts/register">Register</a></li>
-                {% endif %}
-              </ul>
-            </div><!--/.nav-collapse -->
-          </div>
-        </nav>
-
-        <!-- Content -->
-        <div id="main" class="container theme-showcase" role="main">
+{#        <nav class="navbar navbar-fixed-top">#}
+{#          <div class="container">#}
+{#            <div>#}
+{#              <ul class="nav navbar-nav navbar-right">#}
+{#                {% if user.is_authenticated %}#}
+{#                    <li><a href="{% url 'userSummary' user.display_name %}">Profile</a></li>#}
+{#                    {% if user.is_superuser %}#}
+{#                        <li><a href="{% url 'usersPage' %}">Users</a></li>#}
+{#                    {% endif %}#}
+{#                    <li><a href="/accounts/logout">Logout</a></li>#}
+{#                {% else %}#}
+{#                    <li><a href="/accounts/login">Login</a></li>#}
+{#                    <li><a href="/accounts/register">Register</a></li>#}
+{#                {% endif %}#}
+{#              </ul>#}
+{#            </div><!--/.nav-collapse -->#}
+{#          </div>#}
+{#        </nav>#}
+    <!-- Content -->
+        <div id="main" class="container section-sheet" role="main">
             {% block title %}{% endblock %}
-            <div class="row">
+            <div>
                 {% block content %}{% endblock %}
             </div>
         </div>
     </div>
-	<footer>
-        <div class="navbar navbar-fixed-bottom">
-            <div class="container">
-                <p><a href="#" target="blank">Link1</a> | <a href="#" target="blank">Link2</a> | <a href="#" target="blank">Link3</a> | <a href="#" target="blank">Link4</a></p>
-            </div>
-        </div>
-	</footer>
-
-    	<!-- Bootstrap core JavaScript
+  	<!-- Bootstrap core JavaScript
 	================================================== -->
     {% include 'djeddit/base_scripts.html' %}
     {% block scripts %}{% endblock %}
-</body>
 
 <script type="text/javascript">
     window.BASE_URL = "http://{{ request.get_host }}";
@@ -62,4 +52,23 @@
 	};
 		{% endif %}
 </script>
-</html>
+{% endblock %}
+
+{% block mathjax_config %}
+
+<script type="text/x-mathjax-config" src="{% static 'djeddit/js/mathjax-settings.js' %}"> {# FIXME we do not have djeddit/js/mathjax-settings.js file #}
+    MathJax.Ajax.config.path["mhchem"] =
+  "https://cdnjs.cloudflare.com/ajax/libs/mathjax-mhchem/3.3.0";
+MathJax.Hub.Config({
+    extensions: ["tex2jax.js", "[mhchem]/mhchem.js"],
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { fonts: ["TeX"] }
+});
+</script>
+
+{% endblock %}
