--- a/djeddit/templates/djeddit/base_scripts.html
+++ b/djeddit/templates/djeddit/base_scripts.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 {% load staticfiles %}
-<script type="text/javascript" src="{% static 'djeddit/bower_components/jquery/dist/jquery.min.js' %}"></script>
-<script type="text/javascript" src="{% static 'djeddit/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script>
+<!-- <script type="text/javascript" src="{% static 'djeddit/bower_components/jquery/dist/jquery.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'djeddit/bower_components/bootstrap/dist/js/bootstrap.min.js' %}"></script> -->
 <script type="text/javascript" src="{% static 'djeddit/bower_components/bootstrap-select/dist/js/bootstrap-select.min.js' %}"></script>
 <script type="text/javascript" src="{% static 'djeddit/js/ie10-viewport-bug-workaround.js' %}"></script>
 <script type="text/javascript" src="{% static 'djeddit/js/csrf.js' %}"></script>
 <script type="text/javascript" src="{% static 'djeddit/js/url-join.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/pib-mobile-connect.js' %}"></script>
+
+{% comment %} <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> {% endcomment %}
