--- a/djeddit/templates/djeddit/user_replies.html
+++ b/djeddit/templates/djeddit/user_replies.html
@@ -2,8 +2,10 @@
 {% extends "djeddit/user_page.html" %}
 {% load djeddit_tags %}
 {% block navtabs %}
-    <li role="presentation"><a href="{% url 'userSummary' pageUser.username %}">Summary</a></li>
-    <li role="presentation"><a href="{% url 'userThreads' pageUser.username %}">Threads</a></li>
+    <li role="presentation"><a href="{% url 'userSummary' pageUser.pk %}">Summary</a></li>
+    <li role="presentation"><a href="{% url 'userThreads' pageUser.pk %}">Threads</a></li>
+{#    <li role="presentation"><a href="{% url 'userSummary' pageUser.pk %}">Summary</a></li>#}
+{#    <li role="presentation"><a href="{% url 'userThreads' pageUser.display_name %}">Threads</a></li>#}
     <li role="presentation" class="active"><a href="#">Replies</a></li>
 {% endblock %}
 {% block groupItems %}
