--- a/djeddit/templates/djeddit/user_summary.html
+++ b/djeddit/templates/djeddit/user_summary.html
@@ -3,23 +3,38 @@
 {% load djeddit_tags %}
 {% block navtabs %}
     <li role="presentation" class="active"><a href="#">Summary</a></li>
-    <li role="presentation"><a href="{% url 'userThreads' pageUser.username %}">Threads</a></li>
-    <li role="presentation"><a href="{% url 'userReplies' pageUser.username %}">Replies</a></li>
+{#    <li role="presentation"><a href="{% url 'userThreads' pageUser.display_name %}">Threads</a></li>#}
+{#    <li role="presentation"><a href="{% url 'userReplies' pageUser.display_name %}">Replies</a></li>#}
+    <li role="presentation"><a href="{% url 'userThreads' pageUser.pk %}">Threads</a></li>
+    <li role="presentation"><a href="{% url 'userReplies' pageUser.pk %}">Replies</a></li>
 {% endblock %}
 {% block groupItems %}
     {# list of threads & comments by date #}
     {% with True as showTopic %}
-        {% for item in items %}
-            {% if item.getName == 'Thread' %}
-                {% with item as thread %}
-                    {% include 'djeddit/thread_item.html' %}
-                {% endwith %}
-            {% elif item.getName == 'Post' %}
-                {% with item as reply %}
-                    {% include 'djeddit/user_reply_item.html' %}
-                {% endwith %}
-            {% endif %}
+        <h2>User topics</h2>
+        {% for item in threads %}
+            {% with item as thread %}
+                {% include 'djeddit/thread_item.html' %}
+            {% endwith %}
         {% endfor %}
+        <h2>User comments</h2>
+        {% for item in replies %}
+            {% with item as reply %}
+                {% include 'djeddit/user_reply_item.html' %}
+            {% endwith %}
+        {% endfor %}
+
+{#        {% for item in items %}#}
+{#            {% if item.getName == 'Thread' %}#}
+{#                {% with item as thread %}#}
+{#                    {% include 'djeddit/thread_item.html' %}#}
+{#                {% endwith %}#}
+{#            {% elif item.getName == 'Post' %}#}
+{#                {% with item as reply %}#}
+{#                    {% include 'djeddit/user_reply_item.html' %}#}
+{#                {% endwith %}#}
+{#            {% endif %}#}
+{#        {% endfor %}#}
     {% endwith %}
 {% endblock %}
 {% block sideContent %}
