--- a/djeddit/templates/djeddit/base.html
+++ b/djeddit/templates/djeddit/base.html
@@ -1,11 +1,13 @@
+{# TODO gewt from SETTINGS #}
 {% extends "navbar.html" %}
+{#{% extends "navbar.html" %}#}
 
 {% load staticfiles %}
 
 {% block extrahead %}
 {% include 'meta/meta.html' %}
 {% include 'djeddit/base_stylesheets.html' %}
-<link rel="stylesheet" type="text/css" href="{% static 'curricula/style.css' %}" />
+{#<link rel="stylesheet" type="text/css" href="{% static 'curricula/style.css' %}" />#}
 {% endblock %}
 
 {% block body_content %}
